[tool.poetry]
name = "drf-operation-log"
version = "0.3.5"
description = "Operation log for drf serializers."
authors = ["aiden_lu <aiden_lu@wochacha.com>"]

keywords = ["django", "restframework", "operationlog"]
homepage = "https://github.com/anyidea/drf-operation-log"
repository = "https://github.com/anyidea/drf-operation-log"
license = "Apache-2.0"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8"
Django = "^3.2"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

