[virtualenvs]
create = true
in-project = true

[tool.commitizen]
version = "1.0.9"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "pyproject.toml:version",
    "drf_operation_log/__init__.py"
]

[tool.poetry]
name = "drf-operation-log"
version = "1.0.9"
description = "Operation log for drf serializers."
authors = ["aiden_lu <aiden_lu@wochacha.com>"]

keywords = ["django", "restframework", "operationlog"]
homepage = "https://github.com/anyidea/drf-operation-log"
repository = "https://github.com/anyidea/drf-operation-log"
license = "Apache-2.0"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
Django = ">=3.2"
djangorestframework = ">=3.13.1"

[tool.poetry.group.dev.dependencies]
tox = ">=3.27.0"
pre-commit = ">=2.19.0"
virtualenv = ">=20.16.5"
pip = ">=22.3.1"
twine = ">=4.0.1"
toml = ">=0.10.2"
commitizen = ">=2.37.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
flake8-docstrings = "^1.6.0"

[tool.poetry.group.doc.dependencies]
mkdocs  = ">=1.4.2"
mkdocs-material = ">=8.5.9"
mkdocstrings = { version=">=0.19.0", extras=["python"] }
mkdocs-awesome-pages-plugin = ">=2.8.0"
mkdocs-include-markdown-plugin = ">=3.9.1"
mkdocs-static-i18n = ">=0.50"
mkdocs-material-extensions = ">=1.1.1"
pymdown-extensions = "^9.8"
pygments = "^2.13.0"
mkdocs-redirects = "^1.2.0"

[tool.black]
line-length = 89
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | migrations
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
